--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     ></script>
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" type="image/png" href="#" />
-    <title>Portfolio</title>
+    <title>Portfolio Website Assignment</title>
   </head>
   <body>
     <header>
